--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ justify-items: center;
  font-size: 50px;
  width : 300px;
  height : 70px;
- text-align: center;
+ text-align: right;
  align-items: center;
  margin-bottom: 15px;
+ padding-right: 15px;
 }
 .number>div>button{
     font-size: 20px;
